lt-LT: presentation tab
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8014 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -18,8 +18,8 @@ direction=ltr
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.LineupShortcut.desc=Žaidėjo rungtynių istorijoje pridėti nuorodą į rungtynių sudėtį
 foxtrick.LineupShortcut.HighlightPlayer.desc=Paryškinti žaidėją geltona spalva (pakeičia HT žymėjimą).
-foxtrick.SmallerPages.desc=Reduces the dimension of some pages to adapt to small screens
-foxtrick.SmallerPages.ReduceBid.desc=Move the bid beside the skills and cut all strings leaving only numbers (like current bid and time)
+foxtrick.SmallerPages.desc=Sumažina kai kurių puslapių dydį (mažesniems ekranams) 
+foxtrick.SmallerPages.ReduceBid.desc=Pašalinti visą neskaitinę žaidėjo pardavimo informaciją (paliekama kaina ir laikas)
 foxtrick.ForumTemplates.desc=Leidžia išsaugoti žinutes kaip šablonus (taip pat veikia pašto ir svečių knygos puslapiuose)
 foxtrick.ForumTemplates.DefaultShow.desc=Rodo arba paslepia Jūsų šablonus pagal nutylėjimą
 foxtrick.ForumPreview.desc=Prieš išsiunčiant parodo, kaip žinutė atrodys (taip pat veikia pašto ir svečių knygos puslapiuose)
@@ -51,7 +51,7 @@ foxtrick.TransferSearchResultFilters.desc=Papildomi filtrai sandorių paieškos 
 foxtrick.TransferDeadline.desc=Prideda naują eilutę prie kiekvieno parduodamo žaidėjo paieškos rezultatuose su dienomis, valandomis ir minutėmis iki žaidėjo pardavimo pabaigos
 foxtrick.HTDateFormat.desc=Prideda HT savaitės ir sezono informaciją prie svarbiausių datų
 foxtrick.HTDateFormat.LocalSeason.desc=Rodo šalies, o ne pasaulinį sezoną
-foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Use custom offset to set your first day of the week (0 = monday/default, -2 = saturday)
+foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Naudoti individualų pirmosios savaitės dienos nustatymą (0 = pirmadienis (pagal nutylėjimą), -2 = šeštadienis)
 foxtrick.TeamPopupLinks.desc=Rodo mažą lentelę su nuorodomis, jei pelės žymeklis užvestas ant komandos nuorodos
 foxtrick.StaffMarker.desc=Kita spalva išskiria Hattrick darbuotojų vardus forume ir komandų puslapiuose.
 foxtrick.StaffMarker.manager.desc=Pažymėti darbuotojų vardus jų komandos puslapyje.
@@ -129,7 +129,7 @@ foxtrick.ForumAlterHeaderLine.ReplaceSupporterStar.desc=Rėmėjo žvaigždutę p
 foxtrick.ForumAlterHeaderLine.BookmarkHeaderSmall.desc=Sumažina žinutės įtraukimo į žymeklius ikoną
 foxtrick.ForumAlterHeaderLine.HighlightThreadOpener.desc=Paryškinti visų temos kūrėjo parašytų žinučių ID
 foxtrick.AddDefaultFaceCard.desc=Prideda paprastą avatarą forumo žinutėse, jei vartotojas jo visai neturi
-foxtrick.OriginalFace.desc=Show original face of players
+foxtrick.OriginalFace.desc=Rodo standartinius žaidėjų avatarus
 foxtrick.OriginalFace.HideTransfer.desc=Rodo normalų parduodamo žaidėjo avatarą
 foxtrick.OriginalFace.HideInjury.desc=Rodo normalų traumuoto žaidėjo avatarą
 foxtrick.OriginalFace.HideSuspended.desc=Rodo normalų žaidėjo, gavusio raudoną kortelę, avatarą
@@ -184,23 +184,23 @@ foxtrick.ExtendedPlayerDetails.D.desc=Kontrakto trukmės formatas: dienos
 foxtrick.ExtendedPlayerDetailsWage.desc=Rodo atlyginimą be premijos ir (ar) per sezoną
 foxtrick.ExtendedPlayerDetailsWage.WageWithoutBonus.desc=Rodyti atlyginimą be premijos
 foxtrick.ExtendedPlayerDetailsWage.SeasonWage.desc=Rodyti sezoninį atlyginimą
-foxtrick.FixcssProblems.desc=Fixes some Problems of wrong HT css styles
-foxtrick.FixcssProblems.Club_Menu_Teamnames.desc=Fixes cut of long teamnames on left menu
-foxtrick.FixcssProblems.Forum_FoxLink_Headers.desc=Fixes invisible FoxLink images in posting headers
-foxtrick.FixcssProblems.HideInvitation.desc=Hide invitation box visible on the bottom of submenu
-foxtrick.FixcssProblems.Page_Minimum_Height.desc=Fixes jumping page when no scrollbar is shown
-foxtrick.FixcssProblems.RTL_Fixes.desc=Pataiso kelias HT klaidas kalboms, rašančioms iš dešinės į kairę
-foxtrick.FixcssProblems.ForumScrollBarFix.desc=Adds fixed scrollbar to forum. Less flickering than HT option
-foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Increase font size for HT 'small font' format.
-foxtrick.FixcssProblems.RemoveForumSneakPeak.desc=Remove 'Forum sneak-peek' from all pages.
-foxtrick.FixcssProblems.CalendarAutoMinHeight.desc=Use automatic min-height for calendar to reduce space.
-foxtrick.SimplePresentation.desc=Additional presentation options
-foxtrick.SimplePresentation.League_Table.desc=Adds vertical lines to league table for easier reading
-foxtrick.SimplePresentation.Guestbook.desc=Increases readability in the guestbook (indent message with gray background)
-foxtrick.SimplePresentation.liveHighlightRed.desc=Highlights new events red in HT Live
-foxtrick.SimplePresentation.HideAchievementsIcons.desc=Hides icons on achievement page
-foxtrick.SimplePresentation.NoLogo.desc=Hides team logos
-foxtrick.SimplePresentation.Highlight_Staff_On_All_Pages.desc=Highlights HT Staff on all pages
+foxtrick.FixcssProblems.desc=Pataiso keletą neteisingo HT CSS stiliaus sukeltų problemų
+foxtrick.FixcssProblems.Club_Menu_Teamnames.desc=Ilgų komandos pavadinimų nukirpimas kairiajame meniu
+foxtrick.FixcssProblems.Forum_FoxLink_Headers.desc=Pranykę „FoxLink“ paveikslėliai žinučių antraštėse
+foxtrick.FixcssProblems.HideInvitation.desc=Paslėpti pakvietimų skiltį kariajame meniu
+foxtrick.FixcssProblems.Page_Minimum_Height.desc=Puslapis šokinėja nesant slikties juostos
+foxtrick.FixcssProblems.RTL_Fixes.desc=Keletas HT klaidų kalboms, rašančioms iš dešinės į kairę
+foxtrick.FixcssProblems.ForumScrollBarFix.desc=Statiška slinkties juosta forume. Mažiau mirgėjimo.
+foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Padidinti mažojo HT šrifto dydį.
+foxtrick.FixcssProblems.RemoveForumSneakPeak.desc=Pašalinti forumo apžvalgą iš visų puslapių.
+foxtrick.FixcssProblems.CalendarAutoMinHeight.desc=Nustatyti automatinį minimalų kalendoriaus aukštį vietai tausoti.
+foxtrick.SimplePresentation.desc=Papildomi išvaizdos nustatymai
+foxtrick.SimplePresentation.League_Table.desc=Lygos lentelėje prideda vertikalias linijas
+foxtrick.SimplePresentation.Guestbook.desc=Palengvina svečių knygos įrašų skaitymą (žinutėms suteikiamas pilkas fonas)
+foxtrick.SimplePresentation.liveHighlightRed.desc=Naujus įvykius HT-Live pažymi raudonai
+foxtrick.SimplePresentation.HideAchievementsIcons.desc=Paslepia pasiekimų ikonas
+foxtrick.SimplePresentation.NoLogo.desc=Paslepia komandų logotipus
+foxtrick.SimplePresentation.Highlight_Staff_On_All_Pages.desc=Paryškina HT darbuotojus visuose puslapiuose
 foxtrick.ForumPresentation.desc=Papildomo forumo išvaizdos nustatymai
 foxtrick.ForumPresentation.HideFlagsInForumHeader.desc=Pašalina vartotojų vėliavas iš žinutės antraštės
 foxtrick.ForumPresentation.HideLeagueInForumHeader.desc=Pašalina vartotojų grupes iš žinutės antraštės
@@ -250,15 +250,15 @@ foxtrick.CopyYouth.RejectedToHTY.desc=Nukopijuoti skauto komentarą ir atidaryti
 foxtrick.CopyYouth.PlayerSource.desc=Žaidėjo puslapio pirminis tekstas
 foxtrick.CopyYouth.FixturesSource.desc=Tvarkaraščio puslapio pirminis tekstas
 foxtrick.PlayerBirthday.desc=Komandos apžvalgoje rodyti praėjusius ir ateinančius gimtadienius
-foxtrick.MovePlayerSelectbox.desc=Moves players selectbox up on players detail page
+foxtrick.MovePlayerSelectbox.desc=Perkelia iššokantį žaidėjų sąrašą į žaidėjo puslapį
 foxtrick.SeasonStats.desc=Rodyti rungtynių archyvo statistiką
-foxtrick.LeagueNewsFilter.desc=Filters for showing a certain type of league news.
-foxtrick.LeagueNewsFilter.all.desc=Show all news
-foxtrick.LeagueNewsFilter.friendlies.desc=Show only international friendlies and changed coaches
-foxtrick.LeagueNewsFilter.transfers.desc=Show only transfers
-foxtrick.LeagueNewsFilter.lineup_changes.desc=Show only lineup changes
+foxtrick.LeagueNewsFilter.desc=Lygos naujienų filtras pagal tipą.
+foxtrick.LeagueNewsFilter.all.desc=Rodyti visas naujienas
+foxtrick.LeagueNewsFilter.friendlies.desc=Rodyti tik trenerių pakeitimus ir tarptautines draugiškas rungtynes
+foxtrick.LeagueNewsFilter.transfers.desc=Rodyti tik sandorius
+foxtrick.LeagueNewsFilter.lineup_changes.desc=Rodyti tik sudėčių pokyčius
 #MoveManagerOnline
-foxtrick.MoveManagerOnline.desc=Moves managers online up on region page. Caution! This gets very slow if the list of online players get over 100.
+foxtrick.MoveManagerOnline.desc=Perkelia prisijungusių valdytojų sąrašą į regiono puslapį. Atsargiai! Labai sulėtėja, jei prisijungusių valdytojų yra per 100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Pridėti iššokančią lentelę prie komandų nuorodų
 foxtrick.TeamPopupLinks.UserLinks.desc=Pridėti iššokančią lentelę prie komandų valdytojų nuorodų
 foxtrick.TeamPopupLinks.Manager.desc=Nuoroda į komandos valdytojo puslapį (tik komandos puslapyje)
@@ -282,33 +282,33 @@ foxtrick.SkillColoring.desc=Geresnis įgūdžių apipavidalinimas
 foxtrick.SkillColoring.skill_color.desc=Nuspalvina įgūdžius skirtingomis spalvomis
 foxtrick.SkillColoring.only_skill_color.desc=Nuspalvina tik įgūdžius, bet ne žaidėjo charakterį, sirgalių nuotaikas ir pan.
 foxtrick.SkillColoring.skill_number.desc=Rodyti įgūdžių lygius skaičiais, pavyzdžiui, geras (7)
-foxtrick.SkillColoring.skill_number_translated.desc=Show skills also translated to english and as number e.g. gut (solid 7)
+foxtrick.SkillColoring.skill_number_translated.desc=Rodyti įgūdžius anglų kalba ir skaičiumi, pvz., geras (solid 7)
 foxtrick.SkillColoring.skill_select.desc=Rodyti skaičius sandorių paieškoje, pavyzdžiui, geras (7)
 foxtrick.SkillColoring.no_skill_links.desc=Panaikina žaidėjų įgūdžių žalią spalvą ir pabraukimą
-foxtrick.BackgroundFixed.desc=Static background image.
+foxtrick.BackgroundFixed.desc=Statinis fonas.
 foxtrick.MatchIncome.desc=Rungtynių ataskaitoje rodo už bilietus gautas pajamas
 #YouthSkillHideUnknown
-foxtrick.YouthSkillHideUnknown.desc=Hide unknown skills and/or "maximum" word on youth players page
-foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Hide unknown skills
-foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Hide "maximum" word to gain more space
+foxtrick.YouthSkillHideUnknown.desc=Paslėpti nežinomus įgūdžius ir (ar) žodį „maksimalus“ jaunių puslapyje
+foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Paslėpti nežinomus įgūdžius
+foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Paslėpti žodį „maksimalus“
 foxtrick.SkillTable.desc=Žaidėjų įgūdžius rodyti lentelėje.
 foxtrick.SkillTable.OtherTeams.desc=Taip pat ir kitoms komandoms
 foxtrick.SkillTable.ColouredYouth.desc=Jaunių įgūdžius nuspalvinti
 #HighlightCupwins
-foxtrick.HighlightCupwins.desc=Highlight winning teams on cup matches page
-foxtrick.HighlightCupwins.HighlightCupsets.desc=Highlight cupsets (matches won by the team of lower ranking)
-foxtrick.SkillTranslation.desc=Adds English translations to skills on help/denominations page
+foxtrick.HighlightCupwins.desc=Paryškinti laiminčias komandas taurės rungtynių puslapyje
+foxtrick.HighlightCupwins.HighlightCupsets.desc=Paryškinti favoritų pralaimėjimus
+foxtrick.SkillTranslation.desc=Rodo vertimus į anglų kalbą terminologijos puslapyje (pagalbos skiltyje)
 #CountryList
-foxtrick.CountryList.desc=Modifications for country names
-foxtrick.CountryList.SelectBoxes.desc=Replaces English country names in select boxes by their original names
-foxtrick.CountryList.TeamPage.desc=Displays a textlink to the league before the region and series on team page
-foxtrick.CountryList.ManagerPage.desc=Displays a textlink to the league before the language on manager page
-foxtrick.CountryList.HideFlagOntop.desc=Removes the image link to the league on team page
-foxtrick.MatchTables.desc=Removes white space on match tables
-foxtrick.MatchTables.RemoveTime.desc=Removes match time on current matches table
+foxtrick.CountryList.desc=Šalių pavadinimų pakeitimai
+foxtrick.CountryList.SelectBoxes.desc=Pakeisti angliškus pavadinimus iššokančiuose sąrašuose vietiniais pavadinimais
+foxtrick.CountryList.TeamPage.desc=Rodyti tekstinę šalies nuorodą prieš regiono ir grupės pavadinimus komandos puslapyje
+foxtrick.CountryList.ManagerPage.desc=Rodyti tekstinę šalies nuorodą prieš kalbos pavadinimą valdytojo puslapyje
+foxtrick.CountryList.HideFlagOntop.desc=Pašalina šalies paveikslėlį-nuorodą komandos puslapyje
+foxtrick.MatchTables.desc=Panaikina tarpus rungtynių lentelėse
+foxtrick.MatchTables.RemoveTime.desc=Panaikina rungtynių laiką dabartinių rungtynių puslapyje
 foxtrick.YouthPromotes.desc=Rodo dienų skaičių, likusį iki galimo jaunio paaukštinimo
 foxtrick.HTMSPrediction.desc=Rungtynių ataskaitos puslapyje prideda rezultato spėjimą
-foxtrick.HighlightOwnerless.desc=Highlights ownerless teams on the series page.
+foxtrick.HighlightOwnerless.desc=Grupės puslapyje pažymėti komandas be valdytojo.
 foxtrick.LastLogin.desc=Vartotojo puslapyje rodo nuo jo prisijungimo praėjusį laiką
 foxtrick.TransferCompareSort.desc=Clicking on the header sorts the TransferCompare results by TSI, price or form
 foxtrick.ForumStripHattrickLinks.desc=Ištrina konkretaus serverio adresą įterpus nuorodą į vidinį HT puslapį, kad nuoroda veiktų visiems. Taip pat prideda tarpus persiklojantiems „i/b/u“ „pre“ žymose (modulis FormatPostingText)
@@ -319,14 +319,14 @@ foxtrick.LeagueAndMatchChat.OpenGabblyPopup.desc=Atidaryti „Gabbly“ naujame 
 foxtrick.LeagueAndMatchChat.ChatNick.desc=Pasirinkti slapyvardį
 foxtrick.RapidId.desc=Patogus laukas puslapio viršuje komandoms, žaidėjams ir pan. pagal jų ID peržiūrėti
 foxtrick.YouthSeriesEstimation.desc=Paieškos rezultatų lentelėje numato jaunių grupės sezono pradžią.
-foxtrick.LocalTime.desc=Optionally show time in local time zone instead of Hattrick time zone
+foxtrick.LocalTime.desc=Rodyti laiką pagal vietos, o ne Hattrick laiko juostą
 foxtrick.ForumThreadAutoIgnore.desc=Automatiškai ignoruoti temas su pasirinktomis žymomis (temos, prasidedančios „[Žyma]“ ar „{Žyma}“).
 foxtrick.ForumThreadAutoIgnore.Tags.desc=Žymų sąrašas, pvz., „NT“, „Idėja“, „Klaida“. Atskirti kableliais, mažosios raidės neskiriamos nuo didžiųjų.
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Neignoruotinų temų sąrašas (pagal ID – skaičių iki taško žinutės nuorodoje). Atskirti kableliais.
 foxtrick.TableSort.desc=Įgalinti visų lentelių su antraštėmis rikiavimą (įskaitant forumo žinutėse esančias lenteles)
 foxtrick.LiveAlert.desc=Rodyti pranešimą apie HT Live įvarčius
 foxtrick.LiveAlert.Sound.desc=Taip pat paleisti garsinį signalą
-foxtrick.OldStyleFace.desc=Show faces in old Hattrick style
+foxtrick.OldStyleFace.desc=Rodyti senojo stiliaus avatarus
 foxtrick.NtPeek.desc=Žvilgtelėti į nacionalinių rinktinių rungtynes šalies ir Mano Hattrick puslapiuose
 foxtrick.SeriesFlags.desc=Šalia vartotojų nuorodų rodyti grupes ir vėliavas
 foxtrick.SeriesFlags.Guestbook.desc=Svečių knygoje
@@ -338,11 +338,11 @@ foxtrick.HTMSPoints.AddToPlayer.desc=Rodyti žaidėjo puslapyje
 foxtrick.HTMSPoints.AddToSearchResult.desc=Rodyti sandorių paieškos rezultatų puslapyje
 foxtrick.HTMSPoints.AddToPlayerList.desc=Rodyti žaidėjų sąrašo puslapyje
 foxtrick.TableOfStatisticalTruth.desc=Statistinis galutinių pozicijų grupėje spėjimas (ik pasibaigusiems sezonams).
-foxtrick.FriendlyInterface.desc=Tweaks to provide friendlier interface
-foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Show player names without ellipses in match line up page
-foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Display national teams as links for national players
-foxtrick.FriendlyInterface.HideAnswerTo.desc=Hide answer-to links in guest book
-foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Hide the secretary if he has nothing to report
+foxtrick.FriendlyInterface.desc=Patogesnė sąsaja
+foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Rungtynių sudėties puslapyje rodyti pilnas žaidėjų pavardes
+foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Rinktinių žaidėjų puslapiuose rinktinių pavadinimus paversti į nuorodas
+foxtrick.FriendlyInterface.HideAnswerTo.desc=Paslėpti atsakymo nuorodas svečių knygoje
+foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Paslėpti sekretorių, jei nėra nieko naujo
 foxtrick.MyMonitor.desc=Mano Hattrick puslapyje sekite draugų ir varžovų rungtynes
 foxtrick.MyMonitor.TeamIcons.desc=Rodyti komandų logotipus
 foxtrick.MarkAllAsRead.desc=Mygtukas visas temas visuose forumuose pažymi perskaitytomis
@@ -364,9 +364,9 @@ foxtrick.MatchSimulator.desc=Rungtynių nurodymų puslapyje prideda rungtynių s
 foxtrick.MatchSimulator.RatingsOnTop.desc=Reitingų spėjimas lieka virš sudėties
 foxtrick.MatchSimulator.RatingsBellow.desc=Rodyti spėjimą žemiau
 foxtrick.MatchSimulator.RatingsRight.desc=Rodyti spėjimą dešinėje
-foxtrick.HeaderToggle.desc=Clicking on h2-headers toggles showing and hiding of the following section. Remembers last setting individually based on page type and header title
+foxtrick.HeaderToggle.desc=Paspaudus ant antro lygio antraštės (su rodykle) įjungiamas ar išjungiamas tos sekcijos vaizdavimas. Nustatymai atsimenami kiekvienam puslapiui atskirai
 foxtrick.Filter.desc=Geriausių žaidėjų puslapyje pridėti filtrus
-foxtrick.RatingsRange.desc=Displays average ratings in statistics in the 0-20 range
+foxtrick.RatingsRange.desc=Vidutinius reitingus statistikoje paverčia į 0–20 intervalo reitingus
 
 # -----------------------------------------------------------------------------
 
