lt-LT: a typo ant tab rename
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8015 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -201,7 +201,7 @@ foxtrick.SimplePresentation.liveHighlightRed.desc=Naujus įvykius HT-Live pažym
 foxtrick.SimplePresentation.HideAchievementsIcons.desc=Paslepia pasiekimų ikonas
 foxtrick.SimplePresentation.NoLogo.desc=Paslepia komandų logotipus
 foxtrick.SimplePresentation.Highlight_Staff_On_All_Pages.desc=Paryškina HT darbuotojus visuose puslapiuose
-foxtrick.ForumPresentation.desc=Papildomo forumo išvaizdos nustatymai
+foxtrick.ForumPresentation.desc=Papildomi forumo išvaizdos nustatymai
 foxtrick.ForumPresentation.HideFlagsInForumHeader.desc=Pašalina vartotojų vėliavas iš žinutės antraštės
 foxtrick.ForumPresentation.HideLeagueInForumHeader.desc=Pašalina vartotojų grupes iš žinutės antraštės
 foxtrick.ForumPresentation.Forum_Spoiler_reveal.desc=Visada rodyti slaptukų turinį
@@ -398,7 +398,7 @@ YouthPromotes.future=Player can be promoted %1 day(s) later, on %2.
 YouthPromotes.today=Player can be promoted today!
 
 # links
-foxtrick.links.boxheader=Nuorodos
+foxtrick.links.boxheader=Išorinės nuorodos
 
 #teamstats+filters
 foxtrick.TeamStats.label=Komandos apžvalga
