lt-LT: dif to r7971
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8016 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -1,4 +1,4 @@
-# LITHUANIAN language file (to r7932)
+# LITHUANIAN language file (to r7971)
 # utf-8 encoded lt-LT
 # By LA-MJ (originally by Mod-summercloud)
 
@@ -148,6 +148,7 @@ foxtrick.ForumLastPost.lastpage.desc=Atidaryti ne paskutinę žinutę, o visą p
 foxtrick.MatchPlayerColouring.desc=Rungtynių ataskaitoje skirtingų komandų žaidėjai rodomi skirtingomis spalvomis. Pasinaudojus nuoroda konkretaus žaidėjo puslapyje, paryškinamas tik tas žaidėjas.
 foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Atskira spalva saviems žaidėjams 
 foxtrick.MatchReportFormat.desc=Rungtynių ataskaita išskirstoma eilutėmis pagal įvykių laiką ir tipą.
+foxtrick.MatchReportFormat.ShowEventIcons.desc=Rodyti specializuotas įvykių ikonas.
 foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Separate own team coloring
 foxtrick.ForumRedirManagerToTeam.desc=Paspaudus ant vartotojo vardo forume, rodomas komandos puslapis, o ne vartotojo puslapis
 foxtrick.ManagerButtons.desc=Pridėti mygtukus valdytojo ir komandos puslapiuose
@@ -410,6 +411,7 @@ foxtrick.TeamStats.TransferListed.label=Parduodami
 foxtrick.TeamStats.Pictures.label=Paveikslėliai
 foxtrick.TeamStats.PlayedLatest.label=Played in last match
 foxtrick.TeamStats.NotPlayedLatest.label=Did not play last match
+foxtrick.TeamStats.NotTransferListed.label=Not Transfer-listed
 foxtrick.TeamStats.ActivePlayers.label=Active players
 foxtrick.TeamStats.HomeGrownPlayers.label=Homegrown players
 foxtrick.TeamStats.PurchasedPlayers.label=Purchased players
@@ -636,6 +638,9 @@ PlayerNumber.abbr=#
 TSI=Total Skill Index
 TSI.abbr=TSI
 
+CanBePromotedIn=Can be promoted in
+CanBePromotedIn.abbr=Prom
+
 Personality=Personality
 Agreeability=Agreeability
 Agreeability.abbr=Ab
@@ -713,8 +718,6 @@ Current_league.abbr=League
 
 JoinedSince=Joined since
 JoinedSince.abbr=Since
-HomeGrown=Youthplayer
-HomeGrown.abbr=YP
 
 Hotlist=Hotlist
 Hotlist.abbr=Hot
@@ -809,6 +812,7 @@ CopyYouth.fixturesSource=Copy fixtures source
 CopyYouth.fixturesSource.copied=Fixtures source has been copied.
 CopyYouth.goto=Go to %s
 
+MatchReportFormat.MatchReport=Match Report
 MatchReportFormat.lineup=Line-up
 MatchReportFormat.kickOff=Kick-off
 MatchReportFormat.halfTime=Half Time
