lt-LT: added rev # to release notes
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8017 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/release-notes.xml
+++ b/content/locale/lt/release-notes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<!-- Translated to r7911-->
 <!-- Notes for localization -->
 <!-- Please keep the overall structure and the tags like <note>, <item>,
      <module> unchanged, and basically translate the text.
