lt-LT: fixed the failed rename :)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8018 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -399,7 +399,7 @@ YouthPromotes.future=Player can be promoted %1 day(s) later, on %2.
 YouthPromotes.today=Player can be promoted today!
 
 # links
-foxtrick.links.boxheader=Išorinės nuorodos
+foxtrick.links.boxheader=Nuorodos
 
 #teamstats+filters
 foxtrick.TeamStats.label=Komandos apžvalga
@@ -1100,7 +1100,7 @@ tab.shortcutsAndTweaks=Nuorodos ir priedai
 tab.presentation=Išvaizda ir patobulinimai
 tab.matches=Rungtynės
 tab.forum=Forumas
-tab.links=Nuorodos
+tab.links=Išorinės nuorodos
 tab.alert=Pranešimai
 tab.about=Apie
 tab.changes=Šioje versijoje...
