lt-LT: typos and some final tweaks to preferences
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8019 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -33,7 +33,7 @@ foxtrick.AttVsDef.newstyle.desc=naujuoju stiliumi
 foxtrick.AttVsDef.oldstyleifkseparated.desc=senuoju stiliumi (net. stand. situacijos atskirai)
 #Ratings
 foxtrick.Ratings.desc=Rodo reitingus rungtynių puslapyje
-foxtrick.Ratings.HideAverages.desc=Paslėpti vidutinius reitingus
+foxtrick.Ratings.HideAverages.desc=Paslėpti vidutinius HT reitingus
 foxtrick.Ratings.HatStats.desc=HatStats
 foxtrick.Ratings.HatStatsDetailed.desc=HatStats (detaliai)
 foxtrick.Ratings.HatStatsSeparated.desc=HatStats separated per rating
@@ -135,7 +135,7 @@ foxtrick.OriginalFace.HideInjury.desc=Rodo normalų traumuoto žaidėjo avatarą
 foxtrick.OriginalFace.HideSuspended.desc=Rodo normalų žaidėjo, gavusio raudoną kortelę, avatarą
 foxtrick.OriginalFace.ColouredYouth.desc=Rodo spalvotus jaunimo akademijos žaidėjų avatarus (gali sukelti problemų naudojant „Windows Vista“)
 foxtrick.ConfirmActions.desc=Paprašyti patvirtinti tam tikrus veiksmus
-foxtrick.ConfirmActions.Bid.desc=Perkankt žaidėją
+foxtrick.ConfirmActions.Bid.desc=Perkant žaidėją
 foxtrick.ConfirmActions.TransferList.desc=Parduodant žaidėją
 foxtrick.ConfirmActions.NtChange.desc=Įkeliant (pašalinant) žaidėją į (iš) nacionalinės rinktinės
 foxtrick.ConfirmActions.StaffChange.desc=Samdant ir atleidžiant personalą
@@ -162,7 +162,7 @@ foxtrick.TeamStats.Status.desc=Būsena (kortelės ir traumos)
 foxtrick.TeamStats.Current_league.desc=Dabartinė lyga
 foxtrick.ExtraPlayerInfo.desc=Žaidėjų puslapyje rodo daugiau informacijos.
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Rodo buvusių ir esamų trenerių informaciją.
-foxtrick.ExtraPlayerInfo.Flag.desc=Žaidėjo tautybę simbolizuoja vėliava.
+foxtrick.ExtraPlayerInfo.Flag.desc=Žaidėjo pilietybę simbolizuoja vėliava.
 foxtrick.PlayerFilters.desc=Pridėti iššokantį sąrašą žaidėjams žaidėjų puslapyje filtruoti.
 foxtrick.HistoryStats.desc=Sukuria komandos istorijos lentelę.
 foxtrick.LargeFlags.desc=Žaidėjo puslapyje rodo didelę šalies vėliavą, jei rodomi avatarai (gali sutrikti GNU/Linux sistemoje)
@@ -216,7 +216,7 @@ foxtrick.MovePlayerStatement.desc=Perkelia žaidėjo pareiškimus prie žaidėjo
 foxtrick.TickerColoring.desc=Naujienų eilutėje skirtingus įvykius nuspalvinti skirtingomis spalvomis.
 #ExtraShortcuts
 foxtrick.ExtraShortcuts.desc=Prie pagrindinių nuorodų (viršutiniame dešiniajame kampe) prideda keletą papildomų
-foxtrick.ExtraShortcuts.AddLeft.desc=Pažymėjus nuoroda pridedama kairėje, o nepažymėjus – dešinėje.
+foxtrick.ExtraShortcuts.AddLeft.desc=Pažymėjus nuorodos pridedamos kairėje, o nepažymėjus – dešinėje.
 foxtrick.ExtraShortcuts.AddSpace.desc=Padaryti daugiau vietos nuorodoms
 foxtrick.ExtraShortcuts.Supporterstats.desc=Nuoroda į rėmėjo statistiką
 foxtrick.ExtraShortcuts.Transfers.desc=Nuoroda į dabartinius sandorius
@@ -247,7 +247,7 @@ foxtrick.NewMail.NotifyForum.desc=Rodyti pranešimą gavus atsakymą forume
 foxtrick.CopyYouth.desc=Jaunių ataskaitų ir pirminio teksto kopijavimo funkcijos
 foxtrick.CopyYouth.TrainingReport.desc=Treniruočių ataskaita
 foxtrick.CopyYouth.ScoutComment.desc=Skauto komentaras
-foxtrick.CopyYouth.RejectedToHTY.desc=Nukopijuoti skauto komentarą ir atidaryti „HT-Youthclub“ atmetus žaidėją
+foxtrick.CopyYouth.RejectedToHTY.desc=Nukopijuoti skauto komentarą ir atidaryti „HT-Youthclub“ atsisakius skauto pasiūlyto žaidėjo
 foxtrick.CopyYouth.PlayerSource.desc=Žaidėjo puslapio pirminis tekstas
 foxtrick.CopyYouth.FixturesSource.desc=Tvarkaraščio puslapio pirminis tekstas
 foxtrick.PlayerBirthday.desc=Komandos apžvalgoje rodyti praėjusius ir ateinančius gimtadienius
