lt-LT: actions, buttons, status and My Monitor
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8020 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -777,8 +777,8 @@ notify.newForumMessage=There are %s new forum reply(s) to you.
 
 htLive=HT Live
 
-foxtrick.modules_allpages=Modules running on all pages
-HTLanguageChanged=FoxTrick has detected a change in language. The language of FoxTrick is now set to %s.
+foxtrick.modules_allpages=Visuose puslapiuose veikiantys moduliai
+HTLanguageChanged=FoxTrick aptiko kalbos pakeitimą. %s – dabar Foxtrick kalba.
 
 Coach=Treneris
 CurrentSquad=Current squad
@@ -978,17 +978,17 @@ CrossTable.round=R%s
 CrossTable.noMatches=No matches has been played yet.
 
 # MyMonitor
-MyMonitor.header=My Monitor
-MyMonitor.teams=%s teams in monitor
-MyMonitor.add=Monitor this team
-MyMonitor.remove=Remove this team from my monitor
-MyMonitor.addHelp=Go to the team that you want to monitor, and you could see a box on the sidebar for adding the team.
-MyMonitor.removeTeam=Select a team to remove:
+MyMonitor.header=Komandų sekimas
+MyMonitor.teams=Sekama %s komandų
+MyMonitor.add=Sekti šią komandą
+MyMonitor.remove=Nebesekti šios komandos
+MyMonitor.addHelp=Nueikite į komandos puslapį ir kairėje pamatysite skiltį, kur galite pradėti sekti tą komandą.
+MyMonitor.removeTeam=Pasirinkite komandą pašalinti:
 # %n, %t and %i will be replaced by team name, type and ID respectively
-MyMonitor.removeTeamFormat=%n (%t, #%i)
-MyMonitor.type.senior=Senior
-MyMonitor.type.youth=Youth
-MyMonitor.type.nt=National
+MyMonitor.removeTeamFormat=%n (#%i) (%t)
+MyMonitor.type.senior=pagrindinė
+MyMonitor.type.youth=jaunių
+MyMonitor.type.nt=rinktinė
 
 # MarkAllAsRead
 MarkAllAsRead.title=Mark threads in all forums as read
@@ -1018,17 +1018,17 @@ LocalTime.local.title=Time in local time zone. Click the clock to switch to Hatt
 Links.feeds=Nuorodų srautai (kiekvienas iš naujos eilutės)
 
 #actions
-Copy=Copy
-View=View
-Switch_view=Switch view
-Detach=Detach
-AddHomegrown=Add homegrown players
-showTimeInClub=Show time in club
-Filter=Filter
-sort.up=Up
-sort.down=Down
-action.clearCache=Clear cache
-action.clearCache.title=Clears FoxTricks Xml cache. FoxTrick downsloads extra information from Hattrick's servers on demand. Untill you close your browser, FoxTrick will use locally stored copies of those afterwards. On rare occasions they can get outdated. Clear the cache if you want FoxTrick to download those extra informations again.
+Copy=Kopijuoti
+View=Žiūrėti
+Switch_view=Pakeisti vaizdą
+Detach=Atskirti
+AddHomegrown=Pridėti išaugintus žaidėjus
+showTimeInClub=Rodyti praleistą laiką komandoje
+Filter=Filtruoti
+sort.up=Aukštyn
+sort.down=Žemyn
+action.clearCache=Išvalyti podelį
+action.clearCache.title=Išvalo FoxTrick CHPP podėlį. Esant reikalui FoxTrick siunčia papildomą informaciją iš Hattrick serverių. Kol neišjungėte naršyklės, FoxTrick naudoja sukauptus duomenis. Retais atvejais tie duomenys gali būti pasenę. Išvalykite podėlį, jei norite atnaujinti duomenis.
 
 # fennec ui
 pageAction.rightSidebar=Show right bar
@@ -1037,27 +1037,27 @@ pageAction.leftSidebar=Show left bar
 pageAction.all=Show all
 
 # buttons
-button.ok=OK
-button.cancel=Cancel
-button.close=Close
-button.customize=Customize
+button.ok=Gerai
+button.cancel=Atšaukti
+button.close=Uždaryti
+button.customize=Individualizuoti
 button.save=Išsaugoti
 button.go=Eiti į žinutę
-button.add=Add
-button.remove=Remove
+button.add=Pridėti
+button.remove=Pašalinti
 button.top=Viršun
-button.authorize=Authorize
+button.authorize=Autorizuoti
 button.export=Eksportuoti
 button.import=Įkelti
 button.restoreDefault=Atstatyti pradinius nustatymus
 button.deleteToken=Panaikinti prieigą
 button.disableAll=Išjungti viską
 
-status.loading=Loading…
+status.loading=Įkeliama…
 status.loading.abbr=…
-status.error=Error
+status.error=Klaida
 status.error.abbr=!
-status.unknown=Unknown
+status.unknown=Nežinoma
 status.unknown.abbr=?
 
 oauth.authorize=Authorize FoxTrick to access your team data
