lt-LT: extrashortcuts, historystats, teampopups and copy context menu
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8021 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -375,24 +375,24 @@ foxtrick.RatingsRange.desc=Vidutinius reitingus statistikoje paverčia į 0–20
 # IN-GAME STRINGS. translate first
 
 #icons
-foxtrick.ExtraShortcuts.statistics=Statistics
-foxtrick.ExtraShortcuts.transfers=Transfers
-foxtrick.ExtraShortcuts.ManageCHPP=Manage your CHPP products
-foxtrick.ExtraShortcuts.prefs=Preferences
-foxtrick.ExtraShortcuts.ftprefs=FoxTrick preferences
+foxtrick.ExtraShortcuts.statistics=Statistika
+foxtrick.ExtraShortcuts.transfers=Sandoriai
+foxtrick.ExtraShortcuts.ManageCHPP=Valdykite CHPP produktus
+foxtrick.ExtraShortcuts.prefs=Nustatymai
+foxtrick.ExtraShortcuts.ftprefs=FoxTrick nustatymai
 
 #HistoryStats
-foxtrick.HistoryStats.season=Season
+foxtrick.HistoryStats.season=Sezonas
 foxtrick.HistoryStats.season.short=S
-foxtrick.HistoryStats.cup=Cup round
-foxtrick.HistoryStats.cup.short=C
-foxtrick.HistoryStats.league=Series
-foxtrick.HistoryStats.league.short=Ser.
-foxtrick.HistoryStats.pos=Series final position
+foxtrick.HistoryStats.cup=Taurės turas
+foxtrick.HistoryStats.cup.short=T
+foxtrick.HistoryStats.league=Grupė
+foxtrick.HistoryStats.league.short=G
+foxtrick.HistoryStats.pos=Galutinė pozicija grupėje
 foxtrick.HistoryStats.pos.short=P
-foxtrick.HistoryStats.label=History stats
-foxtrick.HistoryStats.cupwinner=Cup winner
-foxtrick.HistoryStats.cupwinner.short=CW
+foxtrick.HistoryStats.label=Istorijos statistika
+foxtrick.HistoryStats.cupwinner=Taurės nugalėtojas
+foxtrick.HistoryStats.cupwinner.short=TN
 
 # YouthPromotes
 YouthPromotes.future=Player can be promoted %1 day(s) later, on %2.
@@ -848,27 +848,27 @@ foxtrick.matches.suppstats=Rėmėjo statistika
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
-copy.id=Copy %s: %i
-copy.link=Copy Link Location in HT-ML
-copy.ht-ml=Copy in HT-ML
-copy.table=Copy Table in HT-ML
+copy.id=Kopijuoti %s: %i
+copy.link=Kopijuoti adresą HT-ML formatu
+copy.ht-ml=Kopijuoti HT-ML formatu
+copy.table=Kopijuoti lentelę HT-ML formatu
 
 #teampopups
 Manager=Savininkas
 Team=Komanda
 Matches=Rungtynės
 Players=Žaidėjai
-last_5_ips=5 paskutiniai prisijungimai
+last_5_ips=Prisijungimai
 Guestbook=Svečių knyga
 SendMessage=Siųsti žinutę
 Challenge=Kviesti
 Achievements=Pasiekimai
 TransferHistory=Sandorių istorija
-TeamHistory=Club history
-NextMatch=Next match
-AddNextMatch=Add next match to HT Live
+TeamHistory=Komandos istorija
+NextMatch=Kitos rungtynės
+AddNextMatch=Kitos rungtynės HT-Live
 LastLineup=Paskutinė sudėtis
-YouthMatches=Youth matches
+YouthMatches=Jaunių rungtynės
 more=daugiau...
 less=mažiau...
 TeamPopupLinks.prefsCaption=Nuorodų nustatymai
