lt-LT: forumicons, bbcode and stuff
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8022 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -479,27 +479,27 @@ ForumYouthIcons.youthteamid=Įterpti jaunių komandos žymę
 ForumYouthIcons.youthmatchid=Įterpti jaunių rungtynių žymę.
 ForumYouthIcons.youthseries=Įterpti jaunių grupės žymę.
 
-ForumOtherIcons.label=Other
-ForumOtherIcons.debug=Insert FoxTrick debug log.
-ForumOtherIcons.settings=Insert FoxTrick settings.
+ForumOtherIcons.label=Kita
+ForumOtherIcons.debug=Įterpti FoxTrick veiklos žurnalą (programuotojams).
+ForumOtherIcons.settings=Įterpti FoxTrick nustatymus.
 
 #special bbcode, not really youth icons
-ForumSpecialBBCode.q=Add quote
+ForumSpecialBBCode.q=Įterpti citatos žymę
 ForumSpecialBBCode.br=Įterpti naujos eilutės žymę
 ForumSpecialBBCode.user=Įterpti vartotojo žymę
-ForumSpecialBBCode.kit=Add kitID
+ForumSpecialBBCode.kit=Įterpti aprangos žymę
 ForumSpecialBBCode.article=Įterpti Hattrick press pranešimo žymę
-ForumSpecialBBCode.clock=Add actual time
-ForumSpecialBBCode.spoiler=Add spoiler
-ForumSpecialBBCode.pre=Insert 'pre' format tag
-ForumSpecialBBCode.table=Insert 'table' format tags resp. convert selected text into a table (Lines are converted in rows. Text separated by "%s" will be converted into cells.)
-ForumSpecialBBCode.tableSeparator=Convert "%s" to cells
-ForumSpecialBBCode.enterSeparator=Enter a custom separator
-ForumSpecialBBCode.forumSymbol=Insert "%s"
-ForumSpecialBBCode.symbols=Insert symbol: %s
+ForumSpecialBBCode.clock=Įterpti dabartinį laiką
+ForumSpecialBBCode.spoiler=Įterpti slaptuką
+ForumSpecialBBCode.pre=Įterpti iš anksto maketuoto teksto žymę („pre“)
+ForumSpecialBBCode.table=Įterpti lentelės žymes: paversti pažymėtą tekstą į lentelę (tekstas, atskirtas „%s“, virs langeliais)
+ForumSpecialBBCode.tableSeparator=Paversti „%s“ langeliais
+ForumSpecialBBCode.enterSeparator=Įveskite kitą atskiriamąjį simbolį
+ForumSpecialBBCode.forumSymbol=Įterpti „%s“
+ForumSpecialBBCode.symbols=Įterpti simbolį: „%s“
 
 
-ShowNestedQoutes=Show nested qoutes  
+ShowNestedQoutes=Rodyti citatas
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Įveskite filtro pavadinimą:
@@ -744,7 +744,7 @@ foxtrick.tlconfirmation=Ar tikrai norite parduoti šį žaiėją? Jūsų nustaty
 foxtrick.staffconfirmationhire=Do you wish to hire %num %kind?
 foxtrick.staffconfirmationsack=Do you wish to sack %num %kind?
 foxtrick.ntremoveconfirmation=Ar tikrai norite priimti ar išmesti šį žaidėją?
-foxtrick.confirmstripserver=Do you want to strip the hattrick server from the links to make the usable in forum?
+foxtrick.confirmstripserver=Ar norite pašalinti nuorodos serverio pavadinimą, kad ja galėtų naudotis visi?
 foxtrick.conferences.signaturetoggle=Parašas
 foxtrick.conferences.markunread=Mark unread from here
 foxtrick.tweaks.selectplayer=Pasirinkti žaidėją
