--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -1027,7 +1027,7 @@ showTimeInClub=Rodyti praleistą laiką komandoje
 Filter=Filtruoti
 sort.up=Aukštyn
 sort.down=Žemyn
-action.clearCache=Išvalyti podelį
+action.clearCache=Išvalyti podėlį
 action.clearCache.title=Išvalo FoxTrick CHPP podėlį. Esant reikalui FoxTrick siunčia papildomą informaciją iš Hattrick serverių. Kol neišjungėte naršyklės, FoxTrick naudoja sukauptus duomenis. Retais atvejais tie duomenys gali būti pasenę. Išvalykite podėlį, jei norite atnaujinti duomenis.
 
 # fennec ui
